--- a/src/pages/MyWork/MyWork.css
+++ b/src/pages/MyWork/MyWork.css
@@ -82,7 +82,7 @@
         height: 272px;
         left: 70px;
         top: 195px;
-        font-size: 20px;
+        font-size: 17px;
         text-align: center;
     }
 }
